--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "incremental": true,
     "strict": true,
     "skipLibCheck": true,
+    "strictPropertyInitialization": false,
     "strictNullChecks": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
